[package]
name = "hackmd-rs"
description = "Rust HackMD client"
version = "0.1.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/hackmd-rs"
repository = "https://github.com/scrabsha/hackmd-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
