[package]
name = "hackmd-rs"
description = "Rust HackMD client"
version = "0.2.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/hackmd-rs"
repository = "https://github.com/scrabsha/hackmd-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1", features = ["serde"] }

[dev-dependencies]
